# ImageCompressor

./: ReadMe.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
app/src/main/java/com/example/imagecompressor/: CompressUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
